--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,11 @@
 [tox]
-envlist = py36, py37,py38 pypy, docs
+envlist = py36, py37,py38,py39,py310 pypy, docs
 skipsdist = true
 
 [travis]
 python =
+    3.10: py310
+    3.9: py39
     3.8: py38
     3.7: py37
     3.6: py36
